added english, fix links path 1.4.0

--- a/en/index.html
+++ b/en/index.html
@@ -1,34 +1,34 @@
 <!DOCTYPE html>
-<html lang="uk">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Nama Home</title>
-    <link rel="stylesheet" href="css/style.min.css" />
+    <link rel="stylesheet" href="/css/style.min.css" />
   </head>
   <body>
     <header class="header">
       <div class="container">
-        <button class="burger-btn" aria-label="Відкрити меню">
+        <button class="burger-btn" aria-label="Open menu">
           <span></span>
           <span></span>
           <span></span>
         </button>
 
         <div class="header__logo">
-          <a href="/">
-            <img src="img/nama_icon.svg" alt="Nama Icon" />
+          <a href="/en/">
+            <img src="/img/nama_icon.svg" alt="Nama Icon" />
           </a>
         </div>
 
         <nav class="header__nav">
           <ul class="header__nav-list">
-            <li><a href="#about">Хто ми?</a></li>
-            <li><a href="/curtains/">Штори</a></li>
-            <li><a href="/pergolas/">Терасні системи</a></li>
-            <li><a href="/marquis/">Маркізи і рефлексолі</a></li>
-            <li><a href="#why_us">Чому саме ми?</a></li>
-            <li><div class="lang-switch">ENG</div></li>
+            <li><a href="#about">Who are we?</a></li>
+            <li><a href="/en/curtains/">Curtains</a></li>
+            <li><a href="/en/pergolas/">Pergola systems</a></li>
+            <li><a href="/en/marquis/">Marquises and reflexoles</a></li>
+            <li><a href="#why_us">Why us?</a></li>
+            <li><div class="lang-switch">UA</div></li>
           </ul>
           
           <div class="header__contact">
@@ -43,7 +43,7 @@
               </svg>
             </a>
             <a href="#" class="btn open-modal">
-              <span class="btn-text">Замовити дзвінок</span>
+              <span class="btn-text">Order a call</span>
             </a>
             
           </div>
@@ -53,18 +53,18 @@
 
     <section class="first-screen">
       <video class="first-screen__video" autoplay muted>
-        <source src="img/main_vid.mp4" type="video/mp4" />
-        Ваш браузер не підтримує відтворення фонового відео.
+        <source src="/img/main_vid.mp4" type="video/mp4" />
+        Your browser does not support the background video playback.
       </video>
 
       <div class="mobile-screen">
         <img 
-          src="img/mobile_screen.png"
+          src="/img/mobile_screen.png"
           alt="Mobile Screen"
           class="mobile-screen__img"
         />
         <img 
-          src="img/nama_logo_screen.png"
+          src="/img/nama_logo_screen.png"
           alt="Nama Mobile Logo"
           class="mobile-screen__logo"
         />
@@ -73,41 +73,41 @@
 
     <section class="about" id="about">
       <div class="container">
-        <h2 class="title">Хто ми?</h2>
+        <h2 class="title">Who are we?</h2>
 
         <div class="about__content">
-          <img src="img/first_image_about.png" alt="First Image About" />
+          <img src="/img/first_image_about.png" alt="First Image About" />
           <div class="about__text">
-            Вже понад 16 років ми створюємо комфорт, стиль і функціональність у просторі за допомогою сучасних сонцезахисних рішень. Наш досвід — це сотні реалізованих проектів: від затишних квартир і приватних будинків до відомих ресторанів, салонів і громадських просторів Харкова.<br/>
-            <br/>Ми спеціалізуємося на:
-            <br/>• римських шторах та класичних текстильних рішеннях,
-            <br/>• деревʼяних жалюзі та рулонних шторах, 
-            <br/>• різних карнизах і системах кріплення,
-            <br/>• маркізах, перголах і зовнішніх сонцезахисних конструкціях.<br/>
-            <br/>Наш підхід — це не просто встановлення. Ми допомагаємо знайти рішення, яке ідеально відповідає вашому інтер’єру, потребам та стилю життя. Уважність до деталей, перевірені матеріали, бездоганний монтаж і повага до кожного замовника — це те, за що нас обирають знову і знову.
+            For over 16 years, we have been creating comfort, style, and functionality in spaces with modern sun protection solutions. Our experience is hundreds of completed projects: from cozy apartments and private houses to famous restaurants, salons, and public spaces in Kharkiv.<br/>
+            <br/>We specialize in:
+            <br/>• Roman blinds and classic textile solutions,
+            <br/>• wooden blinds and roller blinds, 
+            <br/>• various cornices and mounting systems,
+            <br/>• marquises, pergolas, and outdoor sun protection structures.<br/>
+            <br/>Our approach is not just about installation. We help find a solution that perfectly matches your interior, needs, and lifestyle. Attention to detail, proven materials, impeccable installation, and respect for every customer—this is why we are chosen again and again.
           </div>
-          <img src="img/second_image_about.png" alt="Second Image About" />
+          <img src="/img/second_image_about.png" alt="Second Image About" />
         </div>
 
         <div class="about__stats">
           <div class="stat">
             <div class="stat__number">550+</div>
-            <div class="stat__label">ВИКОНАНИХ ПРОЕКТІВ</div>
+            <div class="stat__label">COMPLETED PROJECTS</div>
           </div>
           <div class="stat">
             <div class="stat__number">1000+</div>
-            <div class="stat__label">ЗАДОВОЛЕНИХ КЛІЄНТІВ</div>
+            <div class="stat__label">SATISFIED CLIENTS</div>
           </div>
           <div class="stat">
             <div class="stat__number">12</div>
-            <div class="stat__label">РОКІВ НА РИНКУ</div>
+            <div class="stat__label">YEARS ON THE MARKET</div>
           </div>
 
           <div class="about__bottom-text">
             <p>
-              Ми прагнемо досягти найвищого рівня задоволеності наших клієнтів,
-              тому постійно вдосконалюємо наші послуги та продукцію. Наша мета -
-              зробити ваш простір комфортнішим і красивішим.
+              We strive to achieve the highest level of customer satisfaction,
+              which is why we are constantly improving our services and products. Our goal is to
+              make your space more comfortable and beautiful.
             </p>
           </div>
         </div>
@@ -116,32 +116,32 @@
 
     <section class="projects">
       <div class="container">
-        <h2 class="title">Реалізовані проєкти</h2>
+        <h2 class="title">Completed projects</h2>
         <div class="projects__grid">
           <img
-            src="img/curtains.png"
+            src="/img/curtains.png"
             alt="Curtains"
             class="project-card__img"
           />
 
           <div class="project-card--small">
             <img
-              src="img/curtains_small.png"
+              src="/img/curtains_small.png"
               alt="Curtains Small"
               class="project-card__img project-card__img-small"
             />
 
             <div class="project-card__info">
-              <h3 class="project-card__title">Штори</h3>
+              <h3 class="project-card__title">Curtains</h3>
 
               <p>
-                Ми пропонуємо широкий асортимент штор, які підходять для
-                будь-якого інтер'єру. Від класичних до сучасних рішень - у нас є
-                все!
+                We offer a wide range of curtains that are suitable for
+                any interior. From classic to modern solutions - we have it
+                all!
               </p>
 
               <div class="project-card__btn">
-                <a href="/curtains/" class="btn">Більше проєктів</a>
+                <a href="/en/curtains/" class="btn">More projects</a>
               </div>
             </div>
           </div>
@@ -150,53 +150,53 @@
         <div class="projects__grid">
           <div class="project-card--small">
             <img
-              src="img/pergolas_small.png"
+              src="/img/pergolas_small.png"
               alt="Pergolas Small"
               class="project-card__img project-card__img-small"
             />
 
             <div class="project-card__info">
-              <h3 class="project-card__title">Терасні системи і перголи</h3>
+              <h3 class="project-card__title">Pergola systems and pergolas</h3>
 
               <p>
-                Ми пропонуємо широкий асортимент терасних систем і пергол, які
-                забезпечують комфорт і затишок на вашій терасі. Від класичних до
-                сучасних рішень - у нас є все!
+                We offer a wide range of pergola systems and pergolas that
+                provide comfort and coziness on your terrace. From classic to
+                modern solutions - we have it all!
               </p>
 
               <div class="project-card__btn">
-                <a href="/pergolas/" class="btn">Більше проєктів</a>
+                <a href="/en/pergolas/" class="btn">More projects</a>
               </div>
             </div>
           </div>
           <img
-            src="img/pergolas.png"
+            src="/img/pergolas.png"
             alt="Pergolas"
             class="project-card__img"
           />
         </div>
 
         <div class="projects__grid">
-          <img src="img/marquis.png" alt="Marquis" class="project-card__img" />
+          <img src="/img/marquis.png" alt="Marquis" class="project-card__img" />
 
           <div class="project-card--small">
             <img
-              src="img/marquis_small.png"
+              src="/img/marquis_small.png"
               alt="Marquis Small"
               class="project-card__img project-card__img-small"
             />
 
             <div class="project-card__info">
-              <h3 class="project-card__title">Маркізи і рефлексолі</h3>
+              <h3 class="project-card__title">Marquises and reflexoles</h3>
 
               <p>
-                Ми пропонуємо широкий асортимент маркіз і рефлексолей, які
-                забезпечують комфорт і затишок на вашій терасі. Від класичних до
-                сучасних рішень - у нас є все!
+                We offer a wide range of marquises and reflexoles that
+                provide comfort and coziness on your terrace. From classic to
+                modern solutions - we have it all!
               </p>
 
               <div class="project-card__btn">
-                <a href="/marquis/" class="btn">Більше проєктів</a>
+                <a href="/en/marquis/" class="btn">More projects</a>
               </div>
             </div>
           </div>
@@ -206,55 +206,55 @@
 
     <section class="why-us" id="why_us">
       <div class="container">
-        <h2 class="title why-us__title">Чому саме ми?</h2>
+        <h2 class="title why-us__title">Why us?</h2>
 
         <div class="why-us__item">
           <div class="why-us__left">
             <span class="why-us__number">01.</span>
-            <h3 class="why-us__heading">Стиль</h3>
+            <h3 class="why-us__heading">Style</h3>
           </div>
           <div class="why-us__text">
-            Оформлення вікон є важливою складовою декору кімнати, адже за
-            допомогою самих лише штор можна покращити весь інтер’єр, не даремно
-            дизайнери кажуть, що людину зустрічають по одягу, а кімнату по
-            шторах.
+            Window decoration is an important part of a room's decor, because with
+            curtains alone, you can improve the entire interior. It is not for nothing
+            that designers say that a person is judged by their clothes, and a room by its
+            curtains.
           </div>
           <div class="why-us__images">
             <div class="img-placeholder"></div>
-            <img src="img/why-1.png" alt="Style" />
+            <img src="/img/why-1.png" alt="Style" />
           </div>
         </div>
 
         <div class="why-us__item">
           <div class="why-us__left">
             <span class="why-us__number">02.</span>
-            <h3 class="why-us__heading">Інновації</h3>
+            <h3 class="why-us__heading">Innovations</h3>
           </div>
           <div class="why-us__text">
-            Ми впроваджуємо сучасні технології: автоматизовані системи
-            керування, інтелектуальні механізми та тканини нового покоління.
-            Вони не лише покращують комфорт, а й значно підвищують довговічність
-            та функціональність.
+            We introduce modern technologies: automated control systems,
+            intelligent mechanisms, and new-generation fabrics.
+            They not only improve comfort but also significantly increase durability
+            and functionality.
           </div>
           <div class="why-us__images">
-            <img src="img/why-2a.png" alt="Innovation 1" />
-            <img src="img/why-2b.png" alt="Innovation 2" />
+            <img src="/img/why-2a.png" alt="Innovation 1" />
+            <img src="/img/why-2b.png" alt="Innovation 2" />
           </div>
         </div>
 
         <div class="why-us__item">
           <div class="why-us__left">
             <span class="why-us__number">03.</span>
-            <h3 class="why-us__heading">Індивідуальні<br />проєкти</h3>
+            <h3 class="why-us__heading">Individual<br />projects</h3>
           </div>
           <div class="why-us__text">
-            Кожен проєкт для нас — це унікальна історія. Ми працюємо з
-            індивідуальними запитами, пропонуємо нестандартні рішення та
-            враховуємо найменші деталі. Ваша ідея — наш план дій. Від першого
-            заміру до ідеально встановлених штор.
+            Each project for us is a unique story. We work with
+            individual requests, offer non-standard solutions, and
+            take into account the smallest details. Your idea is our plan of action. From the first
+            measurement to perfectly installed curtains.
           </div>
           <div class="why-us__images">
-            <img src="img/why-3.png" alt="Project" />
+            <img src="/img/why-3.png" alt="Project" />
             <div class="img-placeholder"></div>
           </div>
         </div>
@@ -264,19 +264,19 @@
     <section class="footer">
       <div class="container">
         <div class="footer__logo">
-          <a href="/">
-            <img src="img/nama_icon_black.svg" alt="Nama Icon Black" />
+          <a href="/en/">
+            <img src="/img/nama_icon_black.svg" alt="Nama Icon Black" />
           </a>
         </div>
 
         <nav class="footer__nav">
           <ul class="footer__nav-list">
-            <li><a href="#about">Хто ми?</a></li>
-            <li><a href="/curtains/">Штори</a></li>
-            <li><a href="/pergolas/">Терасні системи</a></li>
-            <li><a href="/marquis/">Маркізи і рефлексолі</a></li>
-            <li><a href="#why_us">Чому саме ми?</a></li>
-            <li><div class="lang-switch">ENG</div></li>
+            <li><a href="#about">Who are we?</a></li>
+            <li><a href="/en/curtains/">Curtains</a></li>
+            <li><a href="/en/pergolas/">Pergola systems</a></li>
+            <li><a href="/en/marquis/">Marquises and reflexoles</a></li>
+            <li><a href="#why_us">Why us?</a></li>
+            <li><div class="lang-switch">UA</div></li>
           </ul>
 
           <div class="footer__contact">
@@ -291,7 +291,7 @@
               </svg>
             </a>
             <a href="#" class="btn open-modal">
-              <span class="btn-text">Замовити дзвінок</span>
+              <span class="btn-text">Order a call</span>
             </a>
           </div>
         </nav>
@@ -301,7 +301,7 @@
     <footer class="footer__bottom">
       <div class="container">
         <p>Copyright 2025 NAMAHOME. <br class = "mobile" /> All rights reserved.</p>
-        <p>Діяльність ведеться в межах норм діючого законодавства України</p>
+        <p>Activity is carried out within the norms of the current legislation of Ukraine</p>
       </div>
     </footer>
 
@@ -309,20 +309,20 @@
       <div class="modal__overlay"></div>
       <div class="modal__content">
         <div class="modal__side modal__side--image">
-          <img src="img/modal_photo.png" alt="Side фото">
+          <img src="/img/modal_photo.png" alt="Side photo">
         </div>
         <div class="modal__side modal__side--form">
-          <button class="modal__close" aria-label="Закрити">&times;</button>
-          <h2>Давайте обговоримо ваші ідеї!</h2>
+          <button class="modal__close" aria-label="Close">&times;</button>
+          <h2>Let's discuss your ideas!</h2>
           <p>
-            Відправте нам контактні дані і ми зв’яжемося з вами найближчим часом.<br>
-            Або напишіть нашему менеджеру у Telegram.
+            Send us your contact information and we will get back to you shortly.<br>
+            Or write to our manager on Telegram.
           </p>
           <form id="callback-form" action="sendmail.php" method="POST">
             <input 
               type="text" 
               name="name" 
-              placeholder="Ваше ім’я" 
+              placeholder="Your name" 
               required 
             />
             <input 
@@ -333,19 +333,19 @@
               value=""
               required 
             />
-            <button type="submit" class="btn btn--post">Замовити дзвінок</button>
+            <button type="submit" class="btn btn--post">Order a call</button>
           </form>
           <div id="callback-result" class="modal__result"></div>
-          <div class="modal__or">або</div>
+          <div class="modal__or">or</div>
           <a href="https://t.me/darkius" target="_blank" class="btn btn--telegram">
             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="currentColor">
               <path d="M20.7101 3.6545C20.7101 3.6545 22.6526 2.897 22.4901 4.7365C22.4366 5.494 21.9511 8.1455 21.5731 11.013L20.2781 19.508C20.2781 19.508 20.1701 20.7525 19.1986 20.969C18.2276 21.185 16.7706 20.2115 16.5006 19.995C16.2846 19.8325 12.4536 17.3975 11.1046 16.2075C10.7266 15.8825 10.2946 15.2335 11.1586 14.476L16.8246 9.065C17.4721 8.415 18.1196 6.9 15.4216 8.74L7.86665 13.88C7.86665 13.88 7.00315 14.4215 5.38465 13.9345L1.87665 12.852C1.87665 12.852 0.581647 12.0405 2.79415 11.229C8.19065 8.686 14.8281 6.089 20.7096 3.654"/>
             </svg>
-            Чат в Telegram
+            Chat in Telegram
           </a>
         </div>
     </div>
 
-    <script src="js/main.js"></script>
+    <script src="/js/main.js"></script>
   </body>
 </html>
