--- a/en/pergolas/index.html
+++ b/en/pergolas/index.html
@@ -1,36 +1,35 @@
 <!DOCTYPE html>
-<html lang="uk">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Nama Home</title>
-    <link rel="stylesheet" href="css/style.min.css" />
+    <title>Nama Pergolas</title>
+    <link rel="stylesheet" href="/css/style.min.css" />
   </head>
   <body>
-    <header class="header">
+    <header class="header header-mobile">
       <div class="container">
-        <button class="burger-btn" aria-label="Відкрити меню">
+        <button class="burger-btn" aria-label="Open menu">
           <span></span>
           <span></span>
           <span></span>
-        </button>
+        </button>        
 
         <div class="header__logo">
-          <a href="/">
-            <img src="img/nama_icon.svg" alt="Nama Icon" />
+          <a href="/en/">
+            <img src="/img/nama_icon.svg" alt="Nama Icon" />
           </a>
         </div>
 
         <nav class="header__nav">
           <ul class="header__nav-list">
-            <li><a href="#about">Хто ми?</a></li>
-            <li><a href="/curtains/">Штори</a></li>
-            <li><a href="/pergolas/">Терасні системи</a></li>
-            <li><a href="/marquis/">Маркізи і рефлексолі</a></li>
-            <li><a href="#why_us">Чому саме ми?</a></li>
-            <li><div class="lang-switch">ENG</div></li>
+            <li><a href="/en/">Home</a></li>
+            <li><a href="/en/curtains/">Curtains</a></li>
+            <li><a href="/en/pergolas/">Pergola systems</a></li>
+            <li><a href="/en/marquis/">Marquises and reflexoles</a></li>
+            <li><div class="lang-switch">UA</div></li>
           </ul>
-          
+
           <div class="header__contact">
             <a href="https://www.instagram.com/_nama_home/">
               <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="currentColor">
@@ -43,106 +42,44 @@
               </svg>
             </a>
             <a href="#" class="btn open-modal">
-              <span class="btn-text">Замовити дзвінок</span>
+              <span class="btn-text">Order a call</span>
             </a>
-            
-          </div>
+          </div>          
         </nav>
       </div>
     </header>
 
     <section class="first-screen">
-      <video class="first-screen__video" autoplay muted>
-        <source src="img/main_vid.mp4" type="video/mp4" />
-        Ваш браузер не підтримує відтворення фонового відео.
-      </video>
-
-      <div class="mobile-screen">
-        <img 
-          src="img/mobile_screen.png"
-          alt="Mobile Screen"
-          class="mobile-screen__img"
-        />
-        <img 
-          src="img/nama_logo_screen.png"
-          alt="Nama Mobile Logo"
-          class="mobile-screen__logo"
-        />
-      </div>
+      <img
+        src="/img/third_screen.png"
+        alt="Third Screen"
+        class="first-screen__img"
+      />
     </section>
 
-    <section class="about" id="about">
+    <section class="projects extra_page">
       <div class="container">
-        <h2 class="title">Хто ми?</h2>
-
-        <div class="about__content">
-          <img src="img/first_image_about.png" alt="First Image About" />
-          <div class="about__text">
-            Вже понад 16 років ми створюємо комфорт, стиль і функціональність у просторі за допомогою сучасних сонцезахисних рішень. Наш досвід — це сотні реалізованих проектів: від затишних квартир і приватних будинків до відомих ресторанів, салонів і громадських просторів Харкова.<br/>
-            <br/>Ми спеціалізуємося на:
-            <br/>• римських шторах та класичних текстильних рішеннях,
-            <br/>• деревʼяних жалюзі та рулонних шторах, 
-            <br/>• різних карнизах і системах кріплення,
-            <br/>• маркізах, перголах і зовнішніх сонцезахисних конструкціях.<br/>
-            <br/>Наш підхід — це не просто встановлення. Ми допомагаємо знайти рішення, яке ідеально відповідає вашому інтер’єру, потребам та стилю життя. Уважність до деталей, перевірені матеріали, бездоганний монтаж і повага до кожного замовника — це те, за що нас обирають знову і знову.
-          </div>
-          <img src="img/second_image_about.png" alt="Second Image About" />
-        </div>
-
-        <div class="about__stats">
-          <div class="stat">
-            <div class="stat__number">550+</div>
-            <div class="stat__label">ВИКОНАНИХ ПРОЕКТІВ</div>
-          </div>
-          <div class="stat">
-            <div class="stat__number">1000+</div>
-            <div class="stat__label">ЗАДОВОЛЕНИХ КЛІЄНТІВ</div>
-          </div>
-          <div class="stat">
-            <div class="stat__number">12</div>
-            <div class="stat__label">РОКІВ НА РИНКУ</div>
-          </div>
-
-          <div class="about__bottom-text">
-            <p>
-              Ми прагнемо досягти найвищого рівня задоволеності наших клієнтів,
-              тому постійно вдосконалюємо наші послуги та продукцію. Наша мета -
-              зробити ваш простір комфортнішим і красивішим.
-            </p>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <section class="projects">
-      <div class="container">
-        <h2 class="title">Реалізовані проєкти</h2>
+        <h2 class="title">Pergola systems and pergolas</h2>
         <div class="projects__grid">
           <img
-            src="img/curtains.png"
-            alt="Curtains"
+            src="/img/pergolas2.png"
+            alt="Pergolas 2"
             class="project-card__img"
           />
 
           <div class="project-card--small">
             <img
-              src="img/curtains_small.png"
-              alt="Curtains Small"
+              src="/img/pergolas2_small.png"
+              alt="Pergolas 2 Small"
               class="project-card__img project-card__img-small"
             />
 
             <div class="project-card__info">
-              <h3 class="project-card__title">Штори</h3>
+              <h3 class="project-card__title">Louvered pergola Vision</h3>
 
               <p>
-                Ми пропонуємо широкий асортимент штор, які підходять для
-                будь-якого інтер'єру. Від класичних до сучасних рішень - у нас є
-                все!
+                By main characteristics: quality, safety, reliability + service. This is the best product in Ukraine.
               </p>
-
-              <div class="project-card__btn">
-                <a href="/curtains/" class="btn">Більше проєктів</a>
-              </div>
             </div>
           </div>
         </div>
@@ -150,112 +87,49 @@
         <div class="projects__grid">
           <div class="project-card--small">
             <img
-              src="img/pergolas_small.png"
+              src="/img/pergolas_small.png"
               alt="Pergolas Small"
               class="project-card__img project-card__img-small"
             />
 
             <div class="project-card__info">
-              <h3 class="project-card__title">Терасні системи і перголи</h3>
+              <h3 class="project-card__title">
+                PVC pergola ALTO — a modern solution for comfort.
+              </h3>
 
               <p>
-                Ми пропонуємо широкий асортимент терасних систем і пергол, які
-                забезпечують комфорт і затишок на вашій терасі. Від класичних до
-                сучасних рішень - у нас є все!
+                A modern construction for protection from the sun, rain and other weather troubles. In addition, it can become a separate decor element in a private yard.
               </p>
-
-              <div class="project-card__btn">
-                <a href="/pergolas/" class="btn">Більше проєктів</a>
-              </div>
             </div>
           </div>
           <img
-            src="img/pergolas.png"
+            src="/img/pergolas.png"
             alt="Pergolas"
             class="project-card__img"
           />
         </div>
 
         <div class="projects__grid">
-          <img src="img/marquis.png" alt="Marquis" class="project-card__img" />
+          <img
+            src="/img/pergolas3.png"
+            alt="Pergolas 3"
+            class="project-card__img"
+          />
 
           <div class="project-card--small">
             <img
-              src="img/marquis_small.png"
-              alt="Marquis Small"
+              src="/img/pergolas3_small.png"
+              alt="Pergolas 3 Small"
               class="project-card__img project-card__img-small"
             />
 
             <div class="project-card__info">
-              <h3 class="project-card__title">Маркізи і рефлексолі</h3>
+              <h3 class="project-card__title">Terrace marquises KASKAD</h3>
 
               <p>
-                Ми пропонуємо широкий асортимент маркіз і рефлексолей, які
-                забезпечують комфорт і затишок на вашій терасі. Від класичних до
-                сучасних рішень - у нас є все!
+                Very beautifully and practically implemented in Kharkiv. These are systems that can protect not only from the sun but also from the rain. These systems are designed in modern trends of light eco-design.
               </p>
-
-              <div class="project-card__btn">
-                <a href="/marquis/" class="btn">Більше проєктів</a>
-              </div>
             </div>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <section class="why-us" id="why_us">
-      <div class="container">
-        <h2 class="title why-us__title">Чому саме ми?</h2>
-
-        <div class="why-us__item">
-          <div class="why-us__left">
-            <span class="why-us__number">01.</span>
-            <h3 class="why-us__heading">Стиль</h3>
-          </div>
-          <div class="why-us__text">
-            Оформлення вікон є важливою складовою декору кімнати, адже за
-            допомогою самих лише штор можна покращити весь інтер’єр, не даремно
-            дизайнери кажуть, що людину зустрічають по одягу, а кімнату по
-            шторах.
-          </div>
-          <div class="why-us__images">
-            <div class="img-placeholder"></div>
-            <img src="img/why-1.png" alt="Style" />
-          </div>
-        </div>
-
-        <div class="why-us__item">
-          <div class="why-us__left">
-            <span class="why-us__number">02.</span>
-            <h3 class="why-us__heading">Інновації</h3>
-          </div>
-          <div class="why-us__text">
-            Ми впроваджуємо сучасні технології: автоматизовані системи
-            керування, інтелектуальні механізми та тканини нового покоління.
-            Вони не лише покращують комфорт, а й значно підвищують довговічність
-            та функціональність.
-          </div>
-          <div class="why-us__images">
-            <img src="img/why-2a.png" alt="Innovation 1" />
-            <img src="img/why-2b.png" alt="Innovation 2" />
-          </div>
-        </div>
-
-        <div class="why-us__item">
-          <div class="why-us__left">
-            <span class="why-us__number">03.</span>
-            <h3 class="why-us__heading">Індивідуальні<br />проєкти</h3>
-          </div>
-          <div class="why-us__text">
-            Кожен проєкт для нас — це унікальна історія. Ми працюємо з
-            індивідуальними запитами, пропонуємо нестандартні рішення та
-            враховуємо найменші деталі. Ваша ідея — наш план дій. Від першого
-            заміру до ідеально встановлених штор.
-          </div>
-          <div class="why-us__images">
-            <img src="img/why-3.png" alt="Project" />
-            <div class="img-placeholder"></div>
           </div>
         </div>
       </div>
@@ -264,19 +138,18 @@
     <section class="footer">
       <div class="container">
         <div class="footer__logo">
-          <a href="/">
-            <img src="img/nama_icon_black.svg" alt="Nama Icon Black" />
+          <a href="/en/">
+            <img src="/img/nama_icon_black.svg" alt="Nama Icon Black" />
           </a>
         </div>
 
         <nav class="footer__nav">
           <ul class="footer__nav-list">
-            <li><a href="#about">Хто ми?</a></li>
-            <li><a href="/curtains/">Штори</a></li>
-            <li><a href="/pergolas/">Терасні системи</a></li>
-            <li><a href="/marquis/">Маркізи і рефлексолі</a></li>
-            <li><a href="#why_us">Чому саме ми?</a></li>
-            <li><div class="lang-switch">ENG</div></li>
+            <li><a href="/en/">Home</a></li>
+            <li><a href="/en/curtains/">Curtains</a></li>
+            <li><a href="/en/pergolas/">Pergola systems</a></li>
+            <li><a href="/en/marquis/">Marquises and reflexoles</a></li>
+            <li><div class="lang-switch">UA</div></li>
           </ul>
 
           <div class="footer__contact">
@@ -291,9 +164,9 @@
               </svg>
             </a>
             <a href="#" class="btn open-modal">
-              <span class="btn-text">Замовити дзвінок</span>
+              <span class="btn-text">Order a call</span>
             </a>
-          </div>
+          </div>          
         </nav>
       </div>
     </section>
@@ -301,7 +174,7 @@
     <footer class="footer__bottom">
       <div class="container">
         <p>Copyright 2025 NAMAHOME. <br class = "mobile" /> All rights reserved.</p>
-        <p>Діяльність ведеться в межах норм діючого законодавства України</p>
+        <p>The activity is carried out within the norms of the current legislation of Ukraine</p>
       </div>
     </footer>
 
@@ -309,20 +182,20 @@
       <div class="modal__overlay"></div>
       <div class="modal__content">
         <div class="modal__side modal__side--image">
-          <img src="img/modal_photo.png" alt="Side фото">
+          <img src="/img/modal_photo.png" alt="Side photo">
         </div>
         <div class="modal__side modal__side--form">
-          <button class="modal__close" aria-label="Закрити">&times;</button>
-          <h2>Давайте обговоримо ваші ідеї!</h2>
+          <button class="modal__close" aria-label="Close">&times;</button>
+          <h2>Let's discuss your ideas!</h2>
           <p>
-            Відправте нам контактні дані і ми зв’яжемося з вами найближчим часом.<br>
-            Або напишіть нашему менеджеру у Telegram.
+            Send us your contact information and we will get back to you shortly.<br>
+            Or write to our manager on Telegram.
           </p>
           <form id="callback-form" action="sendmail.php" method="POST">
             <input 
               type="text" 
               name="name" 
-              placeholder="Ваше ім’я" 
+              placeholder="Your name" 
               required 
             />
             <input 
@@ -333,19 +206,19 @@
               value=""
               required 
             />
-            <button type="submit" class="btn btn--post">Замовити дзвінок</button>
+            <button type="submit" class="btn btn--post">Order a call</button>
           </form>
           <div id="callback-result" class="modal__result"></div>
-          <div class="modal__or">або</div>
+          <div class="modal__or">or</div>
           <a href="https://t.me/darkius" target="_blank" class="btn btn--telegram">
             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="currentColor">
               <path d="M20.7101 3.6545C20.7101 3.6545 22.6526 2.897 22.4901 4.7365C22.4366 5.494 21.9511 8.1455 21.5731 11.013L20.2781 19.508C20.2781 19.508 20.1701 20.7525 19.1986 20.969C18.2276 21.185 16.7706 20.2115 16.5006 19.995C16.2846 19.8325 12.4536 17.3975 11.1046 16.2075C10.7266 15.8825 10.2946 15.2335 11.1586 14.476L16.8246 9.065C17.4721 8.415 18.1196 6.9 15.4216 8.74L7.86665 13.88C7.86665 13.88 7.00315 14.4215 5.38465 13.9345L1.87665 12.852C1.87665 12.852 0.581647 12.0405 2.79415 11.229C8.19065 8.686 14.8281 6.089 20.7096 3.654"/>
             </svg>
-            Чат в Telegram
+            Chat in Telegram
           </a>
         </div>
     </div>
 
-    <script src="js/main.js"></script>
+    <script src="/js/main.js"></script>    
   </body>
 </html>
