--- a/pergolas/index.html
+++ b/pergolas/index.html
@@ -3,34 +3,33 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Nama Home</title>
-    <link rel="stylesheet" href="css/style.min.css" />
+    <title>Nama Pergolas</title>
+    <link rel="stylesheet" href="/css/style.min.css" />
   </head>
   <body>
-    <header class="header">
+    <header class="header header-mobile">
       <div class="container">
         <button class="burger-btn" aria-label="Відкрити меню">
           <span></span>
           <span></span>
           <span></span>
-        </button>
+        </button>        
 
         <div class="header__logo">
           <a href="/">
-            <img src="img/nama_icon.svg" alt="Nama Icon" />
+            <img src="/img/nama_icon.svg" alt="Nama Icon" />
           </a>
         </div>
 
         <nav class="header__nav">
           <ul class="header__nav-list">
-            <li><a href="#about">Хто ми?</a></li>
+            <li><a href="/">Головна</a></li>
             <li><a href="/curtains/">Штори</a></li>
             <li><a href="/pergolas/">Терасні системи</a></li>
             <li><a href="/marquis/">Маркізи і рефлексолі</a></li>
-            <li><a href="#why_us">Чому саме ми?</a></li>
             <li><div class="lang-switch">ENG</div></li>
           </ul>
-          
+
           <div class="header__contact">
             <a href="https://www.instagram.com/_nama_home/">
               <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="currentColor">
@@ -45,104 +44,43 @@
             <a href="#" class="btn open-modal">
               <span class="btn-text">Замовити дзвінок</span>
             </a>
-            
-          </div>
+          </div>          
         </nav>
       </div>
     </header>
 
     <section class="first-screen">
-      <video class="first-screen__video" autoplay muted>
-        <source src="img/main_vid.mp4" type="video/mp4" />
-        Ваш браузер не підтримує відтворення фонового відео.
-      </video>
-
-      <div class="mobile-screen">
-        <img 
-          src="img/mobile_screen.png"
-          alt="Mobile Screen"
-          class="mobile-screen__img"
-        />
-        <img 
-          src="img/nama_logo_screen.png"
-          alt="Nama Mobile Logo"
-          class="mobile-screen__logo"
-        />
-      </div>
+      <img
+        src="/img/third_screen.png"
+        alt="Third Screen"
+        class="first-screen__img"
+      />
     </section>
 
-    <section class="about" id="about">
+    <section class="projects extra_page">
       <div class="container">
-        <h2 class="title">Хто ми?</h2>
-
-        <div class="about__content">
-          <img src="img/first_image_about.png" alt="First Image About" />
-          <div class="about__text">
-            Вже понад 16 років ми створюємо комфорт, стиль і функціональність у просторі за допомогою сучасних сонцезахисних рішень. Наш досвід — це сотні реалізованих проектів: від затишних квартир і приватних будинків до відомих ресторанів, салонів і громадських просторів Харкова.<br/>
-            <br/>Ми спеціалізуємося на:
-            <br/>• римських шторах та класичних текстильних рішеннях,
-            <br/>• деревʼяних жалюзі та рулонних шторах, 
-            <br/>• різних карнизах і системах кріплення,
-            <br/>• маркізах, перголах і зовнішніх сонцезахисних конструкціях.<br/>
-            <br/>Наш підхід — це не просто встановлення. Ми допомагаємо знайти рішення, яке ідеально відповідає вашому інтер’єру, потребам та стилю життя. Уважність до деталей, перевірені матеріали, бездоганний монтаж і повага до кожного замовника — це те, за що нас обирають знову і знову.
-          </div>
-          <img src="img/second_image_about.png" alt="Second Image About" />
-        </div>
-
-        <div class="about__stats">
-          <div class="stat">
-            <div class="stat__number">550+</div>
-            <div class="stat__label">ВИКОНАНИХ ПРОЕКТІВ</div>
-          </div>
-          <div class="stat">
-            <div class="stat__number">1000+</div>
-            <div class="stat__label">ЗАДОВОЛЕНИХ КЛІЄНТІВ</div>
-          </div>
-          <div class="stat">
-            <div class="stat__number">12</div>
-            <div class="stat__label">РОКІВ НА РИНКУ</div>
-          </div>
-
-          <div class="about__bottom-text">
-            <p>
-              Ми прагнемо досягти найвищого рівня задоволеності наших клієнтів,
-              тому постійно вдосконалюємо наші послуги та продукцію. Наша мета -
-              зробити ваш простір комфортнішим і красивішим.
-            </p>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <section class="projects">
-      <div class="container">
-        <h2 class="title">Реалізовані проєкти</h2>
+        <h2 class="title">Терасні системи і перголи</h2>
         <div class="projects__grid">
           <img
-            src="img/curtains.png"
-            alt="Curtains"
+            src="/img/pergolas2.png"
+            alt="Pergolas 2"
             class="project-card__img"
           />
 
           <div class="project-card--small">
             <img
-              src="img/curtains_small.png"
-              alt="Curtains Small"
+              src="/img/pergolas2_small.png"
+              alt="Pergolas 2 Small"
               class="project-card__img project-card__img-small"
             />
 
             <div class="project-card__info">
-              <h3 class="project-card__title">Штори</h3>
+              <h3 class="project-card__title">Ламельна пергола Vision</h3>
 
               <p>
-                Ми пропонуємо широкий асортимент штор, які підходять для
-                будь-якого інтер'єру. Від класичних до сучасних рішень - у нас є
-                все!
+                За основними характеристиками: якість, безпека, надійність +
+                сервіс. Це найкращий продукт в Україні.
               </p>
-
-              <div class="project-card__btn">
-                <a href="/curtains/" class="btn">Більше проєктів</a>
-              </div>
             </div>
           </div>
         </div>
@@ -150,112 +88,53 @@
         <div class="projects__grid">
           <div class="project-card--small">
             <img
-              src="img/pergolas_small.png"
+              src="/img/pergolas_small.png"
               alt="Pergolas Small"
               class="project-card__img project-card__img-small"
             />
 
             <div class="project-card__info">
-              <h3 class="project-card__title">Терасні системи і перголи</h3>
+              <h3 class="project-card__title">
+                ПВХ пергола ALTO — сучасне рішення для комфорту.
+              </h3>
 
               <p>
-                Ми пропонуємо широкий асортимент терасних систем і пергол, які
-                забезпечують комфорт і затишок на вашій терасі. Від класичних до
-                сучасних рішень - у нас є все!
+                Сучасна конструкція для захисту від сонця, дощу та інших
+                погодних негараздів. Крім того, вона може стати окремим
+                елементом декору в приватному дворі.
               </p>
-
-              <div class="project-card__btn">
-                <a href="/pergolas/" class="btn">Більше проєктів</a>
-              </div>
             </div>
           </div>
           <img
-            src="img/pergolas.png"
+            src="/img/pergolas.png"
             alt="Pergolas"
             class="project-card__img"
           />
         </div>
 
         <div class="projects__grid">
-          <img src="img/marquis.png" alt="Marquis" class="project-card__img" />
+          <img
+            src="/img/pergolas3.png"
+            alt="Pergolas 3"
+            class="project-card__img"
+          />
 
           <div class="project-card--small">
             <img
-              src="img/marquis_small.png"
-              alt="Marquis Small"
+              src="/img/pergolas3_small.png"
+              alt="Pergolas 3 Small"
               class="project-card__img project-card__img-small"
             />
 
             <div class="project-card__info">
-              <h3 class="project-card__title">Маркізи і рефлексолі</h3>
+              <h3 class="project-card__title">Терасні маркізи КАСКАД</h3>
 
               <p>
-                Ми пропонуємо широкий асортимент маркіз і рефлексолей, які
-                забезпечують комфорт і затишок на вашій терасі. Від класичних до
-                сучасних рішень - у нас є все!
+                Дуже красиво і практично реалізовані в Харкові. Це системи, які
+                можуть захистити не тільки від сонця, але і від дощу. Ці системи
+                спрєктовані в сучасних тенденціях легкого еко-дизайну.
               </p>
-
-              <div class="project-card__btn">
-                <a href="/marquis/" class="btn">Більше проєктів</a>
-              </div>
             </div>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <section class="why-us" id="why_us">
-      <div class="container">
-        <h2 class="title why-us__title">Чому саме ми?</h2>
-
-        <div class="why-us__item">
-          <div class="why-us__left">
-            <span class="why-us__number">01.</span>
-            <h3 class="why-us__heading">Стиль</h3>
-          </div>
-          <div class="why-us__text">
-            Оформлення вікон є важливою складовою декору кімнати, адже за
-            допомогою самих лише штор можна покращити весь інтер’єр, не даремно
-            дизайнери кажуть, що людину зустрічають по одягу, а кімнату по
-            шторах.
-          </div>
-          <div class="why-us__images">
-            <div class="img-placeholder"></div>
-            <img src="img/why-1.png" alt="Style" />
-          </div>
-        </div>
-
-        <div class="why-us__item">
-          <div class="why-us__left">
-            <span class="why-us__number">02.</span>
-            <h3 class="why-us__heading">Інновації</h3>
-          </div>
-          <div class="why-us__text">
-            Ми впроваджуємо сучасні технології: автоматизовані системи
-            керування, інтелектуальні механізми та тканини нового покоління.
-            Вони не лише покращують комфорт, а й значно підвищують довговічність
-            та функціональність.
-          </div>
-          <div class="why-us__images">
-            <img src="img/why-2a.png" alt="Innovation 1" />
-            <img src="img/why-2b.png" alt="Innovation 2" />
-          </div>
-        </div>
-
-        <div class="why-us__item">
-          <div class="why-us__left">
-            <span class="why-us__number">03.</span>
-            <h3 class="why-us__heading">Індивідуальні<br />проєкти</h3>
-          </div>
-          <div class="why-us__text">
-            Кожен проєкт для нас — це унікальна історія. Ми працюємо з
-            індивідуальними запитами, пропонуємо нестандартні рішення та
-            враховуємо найменші деталі. Ваша ідея — наш план дій. Від першого
-            заміру до ідеально встановлених штор.
-          </div>
-          <div class="why-us__images">
-            <img src="img/why-3.png" alt="Project" />
-            <div class="img-placeholder"></div>
           </div>
         </div>
       </div>
@@ -265,17 +144,16 @@
       <div class="container">
         <div class="footer__logo">
           <a href="/">
-            <img src="img/nama_icon_black.svg" alt="Nama Icon Black" />
+            <img src="/img/nama_icon_black.svg" alt="Nama Icon Black" />
           </a>
         </div>
 
         <nav class="footer__nav">
           <ul class="footer__nav-list">
-            <li><a href="#about">Хто ми?</a></li>
+            <li><a href="/">Головна</a></li>
             <li><a href="/curtains/">Штори</a></li>
             <li><a href="/pergolas/">Терасні системи</a></li>
             <li><a href="/marquis/">Маркізи і рефлексолі</a></li>
-            <li><a href="#why_us">Чому саме ми?</a></li>
             <li><div class="lang-switch">ENG</div></li>
           </ul>
 
@@ -293,7 +171,7 @@
             <a href="#" class="btn open-modal">
               <span class="btn-text">Замовити дзвінок</span>
             </a>
-          </div>
+          </div>          
         </nav>
       </div>
     </section>
@@ -309,7 +187,7 @@
       <div class="modal__overlay"></div>
       <div class="modal__content">
         <div class="modal__side modal__side--image">
-          <img src="img/modal_photo.png" alt="Side фото">
+          <img src="/img/modal_photo.png" alt="Side фото">
         </div>
         <div class="modal__side modal__side--form">
           <button class="modal__close" aria-label="Закрити">&times;</button>
@@ -346,6 +224,6 @@
         </div>
     </div>
 
-    <script src="js/main.js"></script>
+    <script src="/js/main.js"></script>    
   </body>
 </html>
